# robotframework-excelsage

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-checks.yml  generate-docs.yml
ExcelSage/: ExcelSage.py
data/: new_excel.xlsx  sample.csv  sample.xlsx  sample_original.xlsx
doc/: ExcelSage.html
docs/: ExcelSage.html  index.html
src/: ExcelSage.py  __init__.py
tests/: excel_test.robot  test_excel_handler.py
